--- a/partials/functioneringsarchief.htm
+++ b/partials/functioneringsarchief.htm
@@ -9,4 +9,6 @@
   <div class="notify" ng-if="ontwikkelingdisplay">
     <p><button ng-click="ontwikkelingsArchief()" class="btn btn-blue" data-page="functioneringsarchief" data-sub="ontwikkelingstrajecten" data-type="button">Overzicht ontwikkelingstrajecten</button></p>
   </div>
+
+  <ng-include src="'partials/functioneringsmenu.htm'"></ng-include>
 </div>
