--- a/partials/profile.htm
+++ b/partials/profile.htm
@@ -1,14 +1,26 @@
-<div id="content-2" class="contentheight">
-  <img src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-left-01-512.png" width="30" ng-click="showPrev(gid)" class="np prev" data-page="profiel" data-type="button-small">
-  <img src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-right-01-512.png" width="30" ng-click="showNext(gid)" class="np next" data-page="profiel" data-type="button-small">
+<div id="content-2" ng-show="spinnerdone">
+  <div ng-show="!piedisplay && spinnerdone">
+    <div class="chart-title">Resultaten Gebieden</div>
+    <div id="chartbar" class="{{ chartClass }}"></div>
+    <p class="notify">Op je best scorende gebied <b>{{ topgebied }}</b> scoor je een {{ topgrade }} en daarmee <b>{{ topvgl }}</b> het gemiddelde van {{ topaverage }} van alle WorkFit gebruikers.</p>
+    <p class="notify">Op je slechts scorende gebied <b>{{ dalgebied }}</b> scoor je een {{ dalgrade }} en daarmee <b>{{ dalvgl }}</b> het gemiddelde van {{ dalaverage }} van alle WorkFit gebruikers.</p>
+    <p><button ng-click="piedisplay = !piedisplay" value="Per Gebied" class="btn btn-red" data-page="profiel" data-sub="switchgraph" data-type="button">Per gebied</button></p>
+  </div>
 
-  <div ng-repeat="(key, value) in results" class="chartcont" ng-show="value.display" ng-swipe-left="showNext(gid)" ng-swipe-right="showPrev(gid)">
-    <div class="chart-title">{{ value.name }}</div>
-    <div id="chart-{{ key }}" class="chart"></div>
-    <p class="notify">Je hebt in de vragen over <b>{{ value.name }}</b> {{ value.score }} punten gehaald uit maximaal {{ value.maxscore }}, oftewel {{ value.percdisplay }}% positief.
-      <span ng-if="value.percentage > 0.7">Dit is boven onze gehanteerde drempel van 40% als risico-indicatie. Prima!</span>
-      <span ng-if="value.percentage > 0.4 && value.percentage < 0.7">Dit is boven onze gehanteerde drempel van 40% als risico-indicatie. Voldoende dus, maar het kan beter.</span>
-      <span ng-if="value.percentage < 0.4">Dit is onder onze gehanteerde drempel van 40% als risico-indicatie. Dit punt is voor verbetering vatbaar.</span>
-    </p>
+  <div ng-show="piedisplay">
+    <img src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-left-01-512.png" width="30" ng-click="showPrev(gid)" class="np prev" data-page="profiel" data-type="button-small">
+    <img src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-right-01-512.png" width="30" ng-click="showNext(gid)" class="np next" data-page="profiel" data-type="button-small">
+
+    <div ng-repeat="(key, value) in results" class="chartcont" ng-show="value.display" ng-swipe-left="showNext(gid)" ng-swipe-right="showPrev(gid)">
+      <div class="chart-title">{{ value.name }}</div>
+      <div id="chart-{{ key }}" class="chart"></div>
+      <p class="notify">Je hebt in de vragen over <b>{{ value.name }}</b> {{ value.score }} punten gehaald uit maximaal {{ value.maxscore }}, oftewel {{ value.percdisplay }}% positief.
+        <span ng-if="value.percentage > 0.7">Dit is boven onze gehanteerde drempel van 40% als risico-indicatie. Prima!</span>
+        <span ng-if="value.percentage > 0.4 && value.percentage < 0.7">Dit is boven onze gehanteerde drempel van 40% als risico-indicatie. Voldoende dus, maar het kan beter.</span>
+        <span ng-if="value.percentage < 0.4">Dit is onder onze gehanteerde drempel van 40% als risico-indicatie. Dit punt is voor verbetering vatbaar.</span>
+      </p>
+    </div>
+    <p><button ng-click="piedisplay = !piedisplay" value="Totaaloverzicht" class="btn btn-red" data-page="profiel" data-sub="switchgraph" data-type="button">Totaaloverzicht</button></p>
+
   </div>
 </div>
